@@ -1,7 +1,7 @@
 Curl and libcurl 7.19.1
 
  Public curl releases:         107
- Command line options:         127
+ Command line options:         128
  curl_easy_setopt() options:   154
  Public functions in libcurl:  58
  Known libcurl bindings:       36
@@ -11,6 +11,7 @@ This release includes the following changes:
 
  o pkg-config can now show supported_protocols and supported_features
  o Added CURLOPT_CERTINFO and CURLINFO_CERTINFO
+ o Added CURLOPT_POSTREDIR
 
 This release includes the following bugfixes:
 
@@ -30,6 +31,6 @@ This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
  Keith Mok, Yang Tse, Daniel Fandrich, Guenter Knauf, Dmitriy Sergeyev,
- Linus Nielsen Feltzing
+ Linus Nielsen Feltzing, Martin Drasar
 
         Thanks! (and sorry if I forgot to mention someone)
